# github-releases-candidate-e-public

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TEST_PLAN.md  TODO.md  pyproject.toml
.claude/commands/: review-pr.md
.github/actions/code-quality/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: cut-release.yml  deploy.yml  hotfix.yml  main.yml  pr.yml  promote.yml  tag-rc.yml
environments/: prod.json  test.json
src/release_tools/: __init__.py  cut_release.py  finalise_promotion.py  git.py  github.py  github_actions.py  hotfix.py  tag_rc.py  validate_promotion.py  version.py
tasks/: __init__.py  release.py
tests/unit/release_tools/: test_cut_release.py  test_finalise_promotion.py  test_git.py  test_github.py  test_github_actions.py  test_hotfix.py  test_tag_rc.py  test_validate_promotion.py  test_version.py
